# stockapptest

./: main.py  pyproject.toml
.github/workflows/: main.yml
