[project]
name = "stocksapp"
version = "0.1.0"
description = "A Flet Stock Price Fetcher App"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "aritracodespy", email = "you@example.com" }]

dependencies = [
    "flet==0.9.3",
    "yfinance==0.2.31",
    "numpy==1.24.3",
    "pandas==2.0.3"
]

[tool.flet]
org = "com.mycompany"
product = "MyApp"
company = "My Company"
copyright = "Copyright (C) 2025 by My Company"
build_number = 1
app.module = "main"
compile.app = true
compile.packages = true
compile.cleanup = true

[tool.flet.splash]
android = false

[tool.flet.android]
min_sdk_version = 21
target_sdk_version = 34

[tool.flet.android.app.boot_screen]
show = true

[tool.flet.android.app.startup_screen]
show = true

[tool.flet.android.permission]
"android.permission.INTERNET" = true
