[project]
name = "stocksapp"
version = "0.1.0"
description = "A Flet Stock Price Fetcher App"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "aritracodespy", email = "you@example.com" }]

dependencies = [
    "flet",
    "yfinance",
    "numpy",
    "pandas"
]

[tool.flet]
org = "com.mycompany"
product = "MyApp"
company = "My Company"
copyright = "Copyright (C) 2025 by My Company"
build_number = 1
app.module = "main"
compile.app = true
compile.packages = true
compile.cleanup = true

[tool.flet.splash]
android = false

[tool.flet.android.app.boot_screen]
show = true

[tool.flet.android.app.startup_screen]
show = true

[tool.flet.android.permission]
"android.permission.INTERNET" = true
